--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ form .reset:hover {
   border: 1px solid #fff;
 }
 .tables .container {
-  width: 90%;
-  margin: 20px auto;
+  width: 98%;
+  margin: 10px auto;
 }
 .tables table {
   width: 100%;
@@ -141,6 +141,8 @@ button {
     font-size: 16px;
   }
   .tables {
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100vh;
     scrollbar-width: none;
@@ -154,20 +156,23 @@ button {
 
   .tables tbody {
     width: 100%;
-    margin: 0 auto;
   }
 
   .tables td {
-    font-size: 14px;
+    font-size: 9px;
     width: 80%;
-    padding: 10px;
+    padding: 5px 10px;
   }
+
   .tables button {
     padding: 3px;
-    font-size: 14px;
+    font-size: 10px;
   }
   .table thead {
     width: 50%;
     float: left;
+  }
+  th {
+    font-size: 10px;
   }
 }
